bot token removed

--- a/Bot_Code/Bot_Code_2.ipynb
+++ b/Bot_Code/Bot_Code_2.ipynb
@@ -124,7 +124,7 @@
     "logging.basicConfig(level=logging.DEBUG, format='%(asctime)s - %(levelname)s - %(message)s')\n",
     "\n",
     "# Replace 'YOUR_BOT_TOKEN' with your actual bot token\n",
-    "bot_token = \"7498318810:AAFGObjMdONGYKg_WPc4JyWNiZjijULb68o\"\n",
+    "bot_token = \"Bot_Token\"\n",
     "\n",
     "# Initialize the bot with the correct token\n",
     "bot = telebot.TeleBot(bot_token)\n",
